# fastapi_presentation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml
.cursor/: rules.json  settings.json
project/: database.py  hello.py  main.py  pyproject.toml
project/app/: database.py  logger.py  main.py  middleware.py  server.py  tags_metadata.json
project/app/db/: chinook.db
project/app/db/active/: chinook.db
project/app/endpoints/: children.py  common.py  crud.py  routes.py
project/app/endpoints/albums/: crud.py  routes.py
project/app/endpoints/artists/: crud.py  routes.py
project/app/endpoints/customers/: crud.py  routes.py
project/app/endpoints/employees/: crud.py  routes.py
project/app/endpoints/genres/: crud.py  routes.py
project/app/endpoints/invoice_items/: crud.py  routes.py
project/app/endpoints/invoices/: crud.py  routes.py
project/app/endpoints/media_types/: crud.py  routes.py
project/app/endpoints/playlists/: crud.py  routes.py
project/app/endpoints/tracks/: crud.py  routes.py
project/app/helpers/: config.py
project/app/models/: albums.py  artist.py  artists.py  chinook.py  combined.py  customers.py  employees.py  fields.py  genres.py  invoice_items.py  invoices.py  media_types.py  metadata.py  playlist_track.py  playlists.py  tracks.py
project/models/: chinook.py
project/tests/: conftest.py  test_album_endpoint.py
zzz_archive/: crud.py
